--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:context=".ui.home.HomeFragment">
 
-</FrameLayout>
+        <!-- TODO: Update blank fragment layout -->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/flashLightsButton"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:backgroundTint="@color/grey"
+            android:text="FlashLights"
+            android:textAllCaps="false"
+            app:cornerRadius="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/colorLightsButton"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:backgroundTint="@color/grey"
+            android:text="ColorLights"
+            android:textAllCaps="false"
+            app:cornerRadius="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/flashLightsButton" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/sosAlerts"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:backgroundTint="@color/grey"
+            android:text="SosAlerts"
+            android:textAllCaps="false"
+            app:cornerRadius="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/colorLightsButton" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
