--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -9,5 +9,17 @@
         android:id="@+id/homeFragment"
         android:name="com.alican.mvvm_starter.ui.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_applicationFragment"
+            app:destination="@id/applicationFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/applicationFragment"
+        android:name="com.alican.mvvm_starter.ui.detail.ApplicationFragment"
+        android:label="ApplicationFragment">
+        <argument
+            android:name="type"
+            app:argType="string" />
+    </fragment>
 </navigation>
