--- a/app/src/main/res/layout/item_adapter.xml
+++ b/app/src/main/res/layout/item_adapter.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="data"
-            type="com.alican.mvvm_starter.data.model.ResponseModel" />
+            type="com.alican.mvvm_starter.data.local.model.FlashLightsEntity" />
     </data>
 
     <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
